Create the other unit test on minus.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/test/html/demo.index.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/test/html/demo.index.html
@@ -1,19 +1,7 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-
-<script src="~/scripts/demo.index.js"></script>
+﻿<script src="~/scripts/demo.index.js"></script>
 
 <h2>Demo</h2>
 <hr />
-
-<table>
-    <tr>
-        <td class="col-md-2"></td>
-    </tr>
-</table>
-
 <div class="row">
     <div class="col-md-2">
         <input type="text" class="form-control" id="numA" />
@@ -21,8 +9,11 @@
     <div class="col-md-2">
         <input type="text" class="form-control" id="numB" />
     </div>
-    <div class="col-md-6">
-        <input type="button" class="form-control" id="calculate" value="Calculate" />
+    <div class="col-md-3">
+        <input type="button" class="form-control" id="add" value="Add" />
+    </div>
+    <div class="col-md-3">
+        <input type="button" class="form-control" id="minus" value="Minus" />
     </div>
     <div class="col-md-2">
         Result : <label id="result"></label>
